Card fix dark mode

--- a/css/components/modal.css
+++ b/css/components/modal.css
@@ -11,6 +11,7 @@
   width: 90%;
   height: 90%;
   background-color: white;
+  color: #333333;
   padding: 4rem 1rem;
   border-radius: 5px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
